adapt to Continous Delivery structure